<resources>
    <string name="app_name">My Shop</string>


    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="already">Already\nHave\nan acount</string>
    <string name="first_step">Here’s\nyour first\nstep with \nus!</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ? </string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="newyouser">New user ? </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="condition">I Agree To the Terms &amp; Condition</string>
    <string name="Enter_Name">Please Enter Your Name</string>
    <string name="Enter_Email">Please Enter Your Email</string>
    <string name="Enter_phone">Please Enter your PhoneNumber</string>
    <string name="Enter_passwrod">Please Enter your PassWord</string>
    <string name="Enter_confirm">Please Enter your Confirm PassWord</string>
    <string name="Enter_terms">Please Agree TO The Term</string>
    <string name="Enter_match_password">Password &amp; Confirm Password Does Not Match</string>
    <string name="wait">Please Wait</string>
    <string name="success_register">Your registration was successful</string>
    <string name="success_login">Your login was successful</string>
    <string name="forgot_password_screen">forgot password screen</string>
    <string name="forgot_password_detail">Enter your email address!!we will send you an email to reset your password</string>
    <string name="send">Send</string>
    <string name="send_forgot_password_email">Email Sent Successfully To Reset Your Password!!</string>
    <string name="sending">Sending</string>
    <string name="LastName">LastName</string>
    <string name="faildSelectedImage">The selected photo does not fit</string>
    <string name="save">Save</string>
    <string name="Enter_lastname">Please Enter your lastName To Complete setup</string>
    <string name="WaitToUpadte">Please Wait To Updating Data</string>
    <string name="WaitToUpadteAndSendPic">Please Wait To Updating Data And Uploading your Profile Image</string>
    <string name="errorWhenUpadteData">Error In Update Please Try Again</string>
    <string name="SuccessWhenUpadteData">Data Updated Successfully</string>
    <string name="title_activity_dashboard">MY Shop</string>
    <string name="title_home">Dashboard</string>
    <string name="title_dashboard">Product</string>
    <string name="title_notifications">Order</string>
    <string name="pleaseAllowPermision">Please allow access to the app in the settings</string>
    <string name="alerttouploadpic">Uploading the image may take a few seconds</string>
    <string name="ErrorInregister">An error occurred while registering. Please try again</string>
    <string name="backtoExit">Please click again to exit</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="Compeleteprofile">Complete</string>
    <string name="welcome">Welcome</string>
    <string name="add_product">Add Product</string>
    <string name="Product_title">Product Title : </string>
    <string name="price">Product Price : </string>
    <string name="product_desc">Product Description :</string>
    <string name="product_quantity">Product Quantity :</string>
    <string name="AddTitleProduct">Please Add title Your Product</string>
    <string name="AddPriceProduct">Please Add Price Your Product</string>
    <string name="AddQuantityProduct">Please Add Quantity Your Product</string>
    <string name="AddDescProduct">Please Add Description Your Product</string>
    <string name="success_addProduct">Your Product Add success</string>
    <string name="failed_addProduct">Your Product filed to Add</string>
    <string name="No_product_Add">No Products Added Yet</string>
    <string name="loading">Loading</string>
    <string name="deletedSuccessFully">Your Product Deleted Successfully</string>
    <string name="deletedfailed">Error in deleting item !!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Are_you_sure">Are you sure you want to delete?😳</string>
    <string name="deleteitem">Delete Item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="detail">Detail</string>
    <string name="addtocart">Add To Cart</string>
    <string name="price_value">$</string>
    <string name="gotocart">Go To Cart</string>
    <string name="outofstock">Out Of Stock</string>
    <string name="outofstockmessage">Sorry, this product is currently out of stock 😕</string>
    <string name="ownproduct">Own Product</string>
    <string name="cartitem">Product in Cart</string>
    <string name="successaddtocart">Product successfully added to cart</string>
    <string name="cart">Cart</string>
    <string name="cartlist">Cart List</string>
    <string name="subtotal">Subtotal : </string>
    <string name="shiping_charge">Shipping Charge : </string>
    <string name="acount">Acount</string>
    <string name="total_amount">Total Amount : </string>
    <string name="no_item_added">No Item Added</string>
    <string name="checkout">Checkout</string>
    <string name="chose">Choose a photo of your product</string>
    <string name="deletedSuccessFullyCartitem">Your Cart Item Deleted Successfully</string>
    <string name="nomoreproduct">The number you requested is more than the number available</string>
    <string name="title_product">Title Product : </string>
    <string name="add_address">Add Address</string>
    <string name="noaddressfound"> No Address Found</string>
    <string name="fullname">FullName</string>
    <string name="zipcode">Zip Code</string>
    <string name="other">Other</string>
    <string name="office">Office</string>
    <string name="home">Home</string>
    <string name="addintional">Additional Note</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="Enter_address">Please Enter Your Address</string>
    <string name="Enter_zipcode">Please Enter Your ZipCode</string>
    <string name="Enter_additional">Please Enter Your additional Note</string>
    <string name="Other_detail">Other Detail</string>
    <string name="successAdd">Your address Added</string>
    <string name="failedaddAddress">Oops!!Your address Not Added</string>
    <string name="selectAddreess">Select Address</string>
    <string name="selectedAddreess">Address Selected is </string>
    <string name="product_item">Product Item</string>
    <string name="PaymentMode">Payment Mode</string>
    <string name="orderPlace">Order Place</string>
    <string name="successAddingOrder">Success Adding Order</string>
    <string name="yourproductoutofstock">Your Product was Out Of Stock</string>
    <string name="failAddingOrder">"Oops!! Your Oreder Adding Not Success "</string>
    <string name="NoOrderYet">Oops!!No Order Placed Yet!!</string>
    <string name="failgetAllOrder">Oops!!error In Geting Order!!Try Again</string>
    <string name="detailOrder">Detail Order</string>
    <string name="orderId">Order ID</string>
    <string name="orderstatus">Order Status</string>
    <string name="orderdate">Order Date</string>
    <string name="orderList">Order List</string>
    <string name="pending">Pending</string>
    <string name="process">Process</string>
    <string name="delivred">Delivered</string>
    <string name="CashOnDelivery">Cash On Delivery</string>
    <string name="sold">Sold</string>
    <string name="NoproductSoldYEt">No Product Sold Yet</string>
    <string name="date">Date Order</string>
    <string name="Buyer">Buyer</string>
    <string name="Sold_date">Sold Date</string>
    <string name="Sales_Invoice">Sales Invoice</string>
    <string name="address_buyer">Buyer Address</string>
    <string name="Sold_Qauntity">Sold Quantity</string>
    <string name="soldPrice">Sold  Price</string>
    <string name="soldDetail">Sold Detail</string>
    <string name="soldImage">Sold Image</string>
    <string name="myshop">MY SHOP</string>
    <string name="addressList">Address List</string>
    <string name="Email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="swipdownTorefresh">Swip Down To Refresh</string>
    <string name="errorinaddtocart">Some Error In adding To Cart Try Again</string>
    <string name="chosevide">Choose a video of your product</string>
    <string name="userdontuploadthepic">The user has not selected a photo or video for their product</string>
    <string name="tour_home">In this tab you can see all the goods for sale</string>
    <string name="tour_home_main">All Product for Sell</string>
    <string name="tour_product_main">Your Product</string>
    <string name="tour_product">In this tab, you can see your product that you want to sell</string>
    <string name="tour_order_main">List  of Your Order</string>
    <string name="tour_order">In this tab you can see the list of your orders</string>
    <string name="tour_sold">In this tab, you can see the list of your sold goods with details</string>
    <string name="tour_sold_main">List of your own goods sold</string>
    <string name="tour_settins_main">Your profile Data</string>
    <string name="tour_settins">Your account settings and addresses are recorded in this section</string>
    <string name="tour_cart_main">Your Cart</string>
    <string name="tour_cart">Your shopping cart is waiting for the purchase to be finalized</string>
    <string name="addnewproduct_main">Add Your product For sell</string>
    <string name="facebook_app_id" translatable="false">626846374938550</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb626846374938550</string>
    <string name="deleteAcount">Delete your Acount</string>
    <string name="WaitToUpadteAndSendPicProduct">Please wait for sending your product Detail</string>
    <string name="English">English</string>

    <string-array name="lanquages">
        <item>English</item>
        <item>Persian</item>
    </string-array>

    <string name="ApiKey_google" translatable="false">AIzaSyBAWL7kLvkD61tcz3o2kXIJ_aR7mhBSFPY</string>
    <string name="title_activity_maps">Map</string>
    <string name="The_displaye_location_is_correct">location is correct</string>
    <string name="findlocation">Find My location</string>
    <string name="Messages">Messages</string>
    <string name="lanquages">lanquages</string>
    <string name="farsi">persian</string>


</resources>