<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myshop.View.fragment.Dashbord"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashbord" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.myshop.View.fragment.ProductFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.myshop.View.fragment.Order"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_order" />
    <fragment

        android:id="@+id/navigation_sold"
        android:name="com.example.myshop.View.fragment.sold"
        android:label="@string/sold"
        tools:layout="@layout/fragment_sold" />
</navigation>