<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/Addadress_toolbar"
            android:layout_width="match_parent"
            android:background="@drawable/main_background"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextAppearance="@style/text_toolbar"
            app:titleTextColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/Addadress_toolbar"
            app:strokeColor="@color/text_color"
            app:strokeWidth=".01dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">
                <com.google.android.material.textview.MaterialTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewParent.headerText"
                    android:textSize="18sp"
                    android:text="@string/add_your_address"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_background"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_address_lyt_fullname"
                    style="@style/parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addAds_fullname"
                        style="@style/modifiedEditText"
                        android:drawableEnd="@drawable/ic_volunteer"
                        android:hint="@string/fullname"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Addads_lyt_phone"
                    style="@style/parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Addads_phonenumber"
                        style="@style/modifiedEditText"
                        android:drawableEnd="@drawable/ic_calling"
                        android:hint="@string/mobile_number"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Addads_lyt_ads"
                    android:layout_height="100dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxStrokeWidth=".4dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    android:layout_marginTop="8dp"
                    app:hintTextColor="@color/text_color"
                    app:boxStrokeColor="@color/second_text_color"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Addads_address"
                        android:gravity="start"
                        android:textSize="14sp"
                        android:textCursorDrawable="@drawable/cursor"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/iranyekanweblight"
                        android:layout_width="match_parent"
                        android:drawableEnd="@drawable/ic_location"
                        android:drawableTint="@color/second_text_color"
                        android:hint="@string/address"
                        android:inputType="textMultiLine"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addads_lyt_zipcode"
                    style="@style/parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addads_zipcode"
                        style="@style/modifiedEditText"
                        android:drawableEnd="@drawable/ic_zipcode"
                        android:hint="@string/zipcode"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addads_lyt_aditional"
                    style="@style/parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addads_additional"
                        style="@style/modifiedEditText"
                        android:drawableEnd="@drawable/ic_edit"
                        android:hint="@string/addintional"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/Addads_chose_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <RadioButton
                        android:id="@+id/Addads_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/gender_selector"
                        android:button="@null"
                        android:fontFamily="@font/iranyekanwebbold"
                        android:text="@string/home"
                        android:textAlignment="center"
                        android:textColor="@color/gender_selector_text_color" />

                    <RadioButton
                        android:id="@+id/Addads_office"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/gender_selector"
                        android:button="@null"
                        android:fontFamily="@font/iranyekanwebbold"
                        android:text="@string/office"
                        android:textAlignment="center"
                        android:textColor="@color/gender_selector_text_color" />
                    <RadioButton
                        android:id="@+id/Addads_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/gender_selector"
                        android:button="@null"
                        android:fontFamily="@font/iranyekanwebbold"
                        android:text="@string/other"
                        android:textAlignment="center"
                        android:textColor="@color/gender_selector_text_color" />
                </RadioGroup>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addads_lyt_otherdetail"
                    android:visibility="gone"
                    style="@style/parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addads_otherdetail"
                        style="@style/modifiedEditText"
                        android:visibility="gone"
                        android:drawableEnd="@drawable/ic_edit"
                        android:hint="@string/Other_detail"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Addads_send_btn"
                    style="@style/viewParent.headerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_background"
                    android:gravity="start"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:backgroundTint="@null"
                    app:icon="@drawable/ic_baseline_save_alt_24"
                    app:iconGravity="end"


                    />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>