<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:orientation="vertical"
        tools:context=".View.activity.Forgot_PassWord">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/forgot_password"
            app:lottie_repeatCount="5" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewParent.headerText"
                    android:text="@string/forgot_password_screen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    style="@style/viewParent.normalText"
                    android:textAlignment="center"
                    android:text="@string/forgot_password_detail" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:padding="10dp"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Forgotpassword_Edt_Email"
                        style="@style/modifiedEditText"
                        android:drawableEnd="@drawable/ic_email"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/Forgotpassword_Btn_Send"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/send"
                    app:initialCornerAngle="27dp"
                    android:layout_marginBottom="15dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>